# rust-prac

./: .gitignore  memo.md
actix-web-blog/: Cargo.toml  README.md  posts.db
actix-web-blog/migrations/2022-12-09-163958_create_posts/: up.sql
actix-web-blog/src/: error.rs  main.rs  repository.rs
actix-web-hello/: Cargo.toml  README.md
actix-web-hello/src/: main.rs
anything/command-line/: memo.md
c/hello/: main.cpp  memo.md
cli/args_clap/: Cargo.toml  Makefile  README.md
cli/weather/: Cargo.toml
games/: README.md
games/walk-the-dog/: Cargo.toml  README.md  package-lock.json
handson/: memo.md
handson/hello/: README.md  caesar_enc.rs  calc_fib  calc_fib.rs  closure.rs  fib.rs  kuku.rs  macro_echo_num  macro_prac  macro_prac.rs  mpsctest.rs  mytree  mytree.rs  prime100.rs  threadtest  threadtest.rs
handson/hi/: Cargo.toml
handson/img_filter/: Cargo.toml
handson/img_thumbnail/: Cargo.toml  README.md
handson/peg_calc/: Cargo.toml
handson/peg_plus/: Cargo.toml
handson/sandobx/: Cargo.toml
handson/web_hello/: Cargo.toml  README.md
lambda-s3event/: README.md
lambda-s3event/src/: main.rs
language/: memo.md
language/rustack/: README.md  double.teeeeeeee  factorial.teeeeeeee  fibonacci.teeeeeeee  if.teeeeeeee
language/teeeeeeee/: CHANGELOG.md  README.md  memo.md  (+3 more)
memo/: memo.md  web_db_131.md
my-rss/: Cargo.toml
url-shortner/: Cargo.toml  memo.md  urls.db3
web-todo/: .env  Cargo.toml  Makefile  compose.yml
web-todo/src/: handlers.rs  main.rs  repositories.rs
web-todo/src/handlers/: todo.rs
web-todo/src/repositories/: todo.rs
(+68 files in other folders)
