[package]
name = "actix-web-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
serde = { version = "1.0.149", features = ["derive"] }
