[package]
name = "web-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = { version = "1.1.0", features= ["full"]}
tokio = {version  = "*", features= ["full"]}
tower  = "*"
mime = "*"
serde = { version  = "*", features= ["derive"]}
serde_json = "*"
tracing = "*"
tracing-subscriber = {version = "*", features=["env-filter"]}
anyhow  = "*"
thiserror = "*"
